--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "less_webapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost/less_webapp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
